# unlp-2026-qa-rag-pipeline

./: .env.example  .gitignore  CLI_README.md  README.md  pyproject.toml
data/: dev_questions.csv  dev_questions_with_context.csv
scripts/documents/dummy/: test.md
scripts/runs/: 0_index_pipeline.py  1_index_pipeline.py  1_qa_pipeline.py  2_index_pipeline.py  2_qa_pipeline.py  3_index_pipeline.py  4_index_pipeline.py  5_index_pipeline.py  6_index_pipeline.py  7_index_pipeline.py  8_index_pipeline.py  9_index_pipeline.py
scripts/runs/context_augmentation/: 10_window_summary_augmentation_index.py  3_window_context_augmentation_index.py  5_window_context_augmentation_index.py
scripts/runs/splitting/: cluster_semantic_1200_300_splitting.py  cluster_semantic_1600_500_splitting.py  full_page_splitting.py  recursive_1200_0_splitting.py  recursive_1200_300_splitting.py  recursive_400_0_splitting.py  recursive_600_0_splitting.py  recursive_800_0_splitting.py  recursive_800_300_splitting.py  sentence_1200_0_splitting.py  sentence_600_0_splitting.py  sentence_800_0_splitting.py
src/data/: dev_questions.csv  dev_questions_with_context.csv
src/data/domain_3/dev/: 9_klas_istorija_ukrajini_gisem_2017.txt
src/merlin/models/embeddings/: __init__.py  embeddings_factory.py  embeddings_provider.py  embeddings_spec.py
src/merlin/models/language_models/: __init__.py  huggingface_language_model.py
src/merlin/rag/index/: __init__.py  index_runner.py  index_state.py
src/unlp_2026_submission/: __main__.py
src/unlp_2026_submission/chunking_evaluation/: __main__.py
src/unlp_2026_submission/cli/: main.py
src/unlp_2026_submission/cli/eval/: __init__.py  accuracy.py  context_recall.py  faithfulness.py  main.py  mteb.py
src/unlp_2026_submission/cli/invoke/: __init__.py
src/unlp_2026_submission/cli/kb/: __init__.py
src/unlp_2026_submission/config/: __init__.py  config.py  knowledge_base_config.py  vector_store_config.py
src/unlp_2026_submission/embeddings/: __init__.py  embeddings_model_factory.py  google_embeddings_model.py  open_ai_embeddings_model.py  sentence_transformer_embeddings_model.py
src/unlp_2026_submission/entities/: __init__.py  document_page.py  question.py  question_domain.py  relevant_document.py  single_answer_question.py
src/unlp_2026_submission/evals/: __init__.py  __main__.py  create_experiment_name.py  evaluate.py  evaluate_answers_accuracy.py  evaluate_answers_faithfulness.py  evaluate_composite_accuracy.py  evaluate_documents_source_accuracy.py  evaluate_documents_source_page_accuracy.py  evaluation_dataset_factory.py  evaluation_dataset_name.py  evaluation_factory.py  evaluation_metric_name.py
src/unlp_2026_submission/evals/accuracy/: __init__.py  accuracy_dataset_factory.py  accuracy_dataset_name.py  accuracy_datasets.py  accuracy_evaluation_factory.py  evaluate_answers_accuracy.py  evaluate_composite_accuracy.py  evaluate_documents_source_accuracy.py  evaluate_documents_source_composite_accuracy.py  evaluate_documents_source_page_accuracy.py
src/unlp_2026_submission/evals/context_recall/: __init__.py  context_recall_experiment.py  context_recall_metric.py  context_recall_prompt.py  evaluate_context_recall.py
src/unlp_2026_submission/evals/datasets/: __init__.py  datasets.py  qa_datasets.py  qa_with_context_datasets.py
src/unlp_2026_submission/evals/domain_classification/: __init__.py  domain_classification_experiment.py  domain_classification_metric.py  evaluate_domain_classification.py
src/unlp_2026_submission/evals/experiments/: __init__.py  answers_accuracy_experiment.py  answers_faithfulness_experiment.py  composite_accuracy_experiment.py  documents_source_accuracy_experiment.py  documents_source_accuracy_metric.py  documents_source_page_accuracy_experiment.py
src/unlp_2026_submission/evals/faithfulness/: __init__.py  answer_faithfulness_metric.py  answers_faithfulness_experiment.py  evaluate_answers_faithfulness.py  faithfulness_dataset_factory.py  faithfulness_dataset_name.py  faithfulness_datasets.py
src/unlp_2026_submission/evals/metrics/: __init__.py  answer_accuracy_metric.py  answer_faithfulness_metric.py  composite_accuracy_metric.py  document_source_accuracy_metric.py  document_source_page_accuracy_metric.py
src/unlp_2026_submission/evals/mteb_retrieval/: __init__.py  evaluate_mteb.py  mteb_task_name.py  qa_mteb_datasets.py  qa_mteb_task.py
src/unlp_2026_submission/knowledge_base/: __init__.py  __main__.py  ingestion_pipeline.py  knowledge_base.py  knowledge_base_builder.py  langchain_knowledge_base.py
src/unlp_2026_submission/knowledge_base/documents/: __init__.py
src/unlp_2026_submission/knowledge_base/ingestion_pipelines/: __init__.py  ingestion_pipeline.py
src/unlp_2026_submission/knowledge_base/node_parsers/: __init__.py
src/unlp_2026_submission/knowledge_base/node_postprocessors/: __init__.py
src/unlp_2026_submission/knowledge_base/storage/: __init__.py
src/unlp_2026_submission/knowledge_base/transformations/: __init__.py
src/unlp_2026_submission/language_models/: __init__.py  fake_llama_index_language_model.py  gemini_language_model.py  hugging_face_language_model.py  judge_language_model_factory.py  language_model.py  language_model_factory.py  llama_cpp_language_model.py  ollama_language_model.py  open_ai_language_model.py
src/unlp_2026_submission/models/embeddings/: __init__.py  embeddings_model.py  embeddings_model_factory.py  google_embeddings_model.py  open_ai_embeddings_model.py  sentence_transformer_embeddings_model.py  stored_queries_embeddings_model.py
src/unlp_2026_submission/models/language_models/: __init__.py  hugging_face_language_model.py  judge_language_model_factory.py  language_model_factory.py  ollama_language_model.py  (+1 more)
src/unlp_2026_submission/reranker_models/: __init__.py  bge_v2_reranker_model.py  cross_encoder_reranker_model.py  jina_v3_reranker_model.py  llm_reranker_model.py  qwen_reranker_model.py
src/unlp_2026_submission/workflow/: __init__.py  qa_workflow_builder.py  workflow_builder.py
(+221 files in other folders)
