[project]
name = "unlp-2026-submission"
version = "0.1.0"
description = ""
authors = [
    {name = "Mykola Nosenko"},
    {name = "Pavlo Kilko"}
]
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "langchain (>=1.2.6,<2.0.0)",
    "langchain-core (>=1.2.7,<2.0.0)",
    "langgraph (>=1.0.6,<2.0.0)",
    "datasets (>=4.5.0,<5.0.0)",
    "ragas (>=0.4.3,<0.5.0)",
    "torch (>=2.9.1,<3.0.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "llama-index (>=0.14.12,<0.15.0)",
    "llama-index-embeddings-langchain (>=0.4.1,<0.5.0)",
    "llama-index-vector-stores-qdrant (>=0.9.1,<0.10.0)",
    "llama-index-llms-openai (>=0.6.13,<0.7.0)",
    "langchain-google-genai (>=4.2.0,<5.0.0)",
    "llama-index-llms-ollama (>=0.9.1,<0.10.0)",
    "fastembed (>=0.7.4,<0.8.0)"
]

[tool.poetry]
packages = [{include = "unlp_2026_submission", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
isort = "^7.0.0"
pylint = "^4.0.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'
line_length = 88
src_paths = ["src", "tests"]
known_first_party = ["unlp_2026_submission"]

[tool.pylint.main]
py-version = "3.13"
jobs = 0                    # 0 = авто-визначення за кількістю ядер
recursive = true

[tool.pylint.message_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    # "R0903", too-few-public-methods
]

[tool.pylint.format]
max-line-length = "88"
