[project]
name = "unlp-2026-submission"
version = "0.1.0"
description = ""
authors = [
    {name = "Mykola Nosenko"},
    {name = "Pavlo Kilko"}
]
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "langchain (>=1.2.6,<2.0.0)",
    "langchain-core (>=1.2.7,<2.0.0)",
    "langgraph (>=1.0.6,<2.0.0)",
    "datasets (>=4.5.0,<5.0.0)",
    "ragas (>=0.4.3,<0.5.0)",
    "torch (>=2.9.1,<3.0.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "llama-index (>=0.14.12,<0.15.0)",
    "langchain-google-genai (>=4.2.0,<5.0.0)",
    "fastembed (>=0.7.4,<0.8.0)",
    "typer (>=0.21.1,<0.22.0)",
    "llama-cpp-python (>=0.3.16,<0.4.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "huggingface-hub (>=0.33.4,<1.0.0)",
    "mteb (>=2.7.10,<3.0.0)",
    "rapidfuzz (>=3.14.3,<4.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "vertexai (>=1.71.1,<2.0.0)",
    "jsonref (>=1.1.0,<2.0.0)",
    "langchain-qdrant (>=1.1.0,<2.0.0)",
    "accelerate (>=1.12.0,<2.0.0)",
    "langchain-experimental (>=0.4.1,<0.5.0)",
    "bitsandbytes (>=0.49.1,<0.50.0)",
    "langchain-huggingface (>=1.2.0,<2.0.0)",
    "docling (>=2.72.0,<3.0.0)",
    "langchain-docling (>=2.0.0,<3.0.0)",
    "pymupdf (>=1.26.7,<2.0.0)",
    "easyocr (>=1.7.2,<2.0.0)",
    "voyageai (>=0.3.7,<0.4.0)",
    "peft (>=0.18.1,<0.19.0)",
]

[tool.poetry]
packages = [{include = "unlp_2026_submission", from = "src"}]

[tool.poetry.scripts]
unlp = "unlp_2026_submission.cli.main:app"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
isort = "^7.0.0"
pylint = "^4.0.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'
line_length = 88
src_paths = ["src", "tests"]
known_first_party = ["unlp_2026_submission"]

[tool.pylint.main]
py-version = "3.13"
jobs = 0                    # 0 = авто-визначення за кількістю ядер
recursive = true

[tool.pylint.message_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    # "R0903", too-few-public-methods
]

[tool.pylint.format]
max-line-length = "88"
